# Nifty_fifty_jse

./: .gitignore  .replit  README.md  main.py  pyproject.toml  pytest.ini  replit.nix  requirements-test.txt  requirements.txt
.github/workflows/: ci_cd.yml
.streamlit/: config.prod.toml  config.toml  style.css
components/: animated_loader.py
data/stock_data/: FSR.JO_20200228_20250228.csv  NPN.JO_20200228_20250228.csv  NPN.JO_20250101_20250103.csv
pages/: advanced_analysis.py  comparison.py  education.py  insights.py  portfolio_comparison.py  portfolio_simulator.py
scripts/: switch_env.py
tests/: test_app.py  test_forecasting.py
utils/: analysis.py  forecasting.py  ml_models.py  mood_indicator.py  sens_analysis.py  stock_data.py
