[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "openai>=1.65.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.42.2",
    "twilio>=9.4.6",
    "yfinance>=0.2.54",
]
